...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VV-wo-hOC">
                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="28.5"/>
                                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="20"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" placeholder="Place name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IWb-HE-Q0N">
                                                            <rect key="frame" x="0.0" y="36.5" width="382" height="26.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="xWI-zA-cEc" id="WTQ-te-3M9"/>
                                                            </connections>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RMR-Xy-uHW">
                                                            <rect key="frame" x="0.0" y="0.0" width="348" height="28.5"/>
                                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="20"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" placeholder="Place location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4ck-sG-1zk">
                                                            <rect key="frame" x="0.0" y="36.5" width="348" height="26.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="xWI-zA-cEc" id="s9F-Vf-sfs"/>
                                                            </connections>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y5m-OA-NNO">
                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="27.5"/>
                                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="20"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" placeholder="Place type" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="03B-gn-Ygo">
                                                            <rect key="frame" x="0.0" y="35.5" width="382" height="27.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                            <connections>
                                                                <outlet property="delegate" destination="xWI-zA-cEc" id="hol-65-Rcv"/>
                                                            </connections>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="xWI-zA-cEc" id="H9Y-mP-dkL"/>
                            <outlet property="delegate" destination="xWI-zA-cEc" id="3cE-un-XqA"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Place" largeTitleDisplayMode="always" id="20R-bY-uKJ">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="QWd-8A-Con">
                            <connections>
                                <action selector="cancelAction:" destination="xWI-zA-cEc" id="3lb-5O-LRS"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="TVh-pN-ADt">
...
                            <constraint firstItem="Heu-al-0hl" firstAttribute="trailing" secondItem="JhV-1I-AZC" secondAttribute="trailing" id="OkJ-GG-YNy"/>
                            <constraint firstItem="Heu-al-0hl" firstAttribute="leading" secondItem="JhV-1I-AZC" secondAttribute="leading" id="dJU-tE-fAU"/>
                            <constraint firstItem="Heu-al-0hl" firstAttribute="top" secondItem="JhV-1I-AZC" secondAttribute="top" id="iq0-o1-nlb"/>
                            <constraint firstItem="zV5-gZ-92d" firstAttribute="leading" secondItem="JhV-1I-AZC" secondAttribute="leading" id="sHQ-Iy-ppb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Places" largeTitleDisplayMode="never" id="pPL-Kl-q12">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="KqD-wM-bep">
                            <connections>
                                <segue destination="PmZ-hg-zRt" kind="presentation" id="E1a-bU-bsD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
